<resources>
    <string name="app_name">Showtime Wallet</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    <!-- Main activity strings -->
    <string name="label_hello_world">I\'m a wallet!</string>

    <!-- Authorize dapp fragment strings -->
    <string name="label_authorize_dapp">Authorize dapp</string>
    <string name="label_verification_state">Status:</string>
    <string name="label_verification_scope">Scope:</string>
    <string name="label_simulate_cluster_not_supported">Simulate cluster not supported</string>

    <!-- Sign In fragment strings -->
    <string name="label_sign_in_with_solana">Sign In With Solana</string>
    <string name="label_sign_in_payload">Sign In Payload:</string>
    <string name="label_domain">Domain:</string>
    <string name="label_siws_uri">URI:</string>
    <string name="label_issued_at">Issued At:</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_simulate_sign_in_not_supported">Simulate sign in not supported</string>

    <!-- Sign Payload fragment strings -->
    <string name="label_sign_transactions">Sign transaction(s)</string>
    <string name="label_sign_messages">Sign message(s)</string>
    <string name="label_num_txns">Num payloads:</string>
    <string name="label_account">Account:</string>
    <string name="label_simulate_authorization_failed">Simulate auth token invalid</string>
    <string name="label_simulate_invalid_payloads">Simulate first payload invalid</string>
    <string name="label_simulate_too_many_payloads">Simulate too many payloads</string>

    <!-- Send Transaction fragment strings -->
    <string name="label_send_transactions">Sending transaction(s)</string>
    <string name="label_simulate_transactions_submitted">Simulate submitted</string>
    <string name="label_simulate_transactions_not_submitted">Simulate submit failed</string>
    <string name="label_send_transaction_to_cluster">Send transaction to cluster</string>

    <!-- Common strings -->
    <string name="label_cluster">Cluster:</string>
    <string name="label_authorize">Authorize</string>
    <string name="label_authorize_x3">Authorize x3</string>
    <string name="label_decline">Decline</string>
    <string name="label_simulate_internal_error">Simulate internal error</string>

    <!-- Client verification states -->
    <string name="str_verification_in_progress">Verification in progress</string>
    <string name="str_verification_succeeded">Verification successful</string>
    <string name="str_verification_failed">Verification failed</string>
    <string name="str_verification_not_verifiable">Client not verifiable</string>

    <!-- No connection due to low power warning strings-->
    <string name="low_power_mode_warning_title">Low Power Mode</string>
    <string name="str_low_power_mode_warning_dsc">
        Your device is currently in power saving mode. Incoming wallet connections will not
        work properly when the device battery save mode is active. Please turn off battery
        saver or plug in your phone and try again.
    </string>
    <string name="enter_x_phrase">Please enter the 3rd phrase</string>
    <string name="keep_wallet_secure">Keep secure</string>
    <string name="write_down_phrase">"Please write down phrase and keep it safe. "</string>
    <string name="wallet_receive">Receive</string>
    <string name="wallet_send">Send</string>
    <string name="wallet_swap">Swap</string>
    <string name="wallet_nfts">NFTs</string>
    <string name="wallet_transactions">History</string>
    <string name="transaction_receive">Receive</string>
    <string name="transaction_time">Time</string>
    <string name="transaction_status">Status</string>
    <string name="transaction_from">From</string>
    <string name="transaction_network">Network</string>
    <string name="view_on_solscan">View on solscan</string>
    <string name="your_wallet_address_is">"Your wallet address is: "</string>
    <string name="confirm">Confirm</string>
    <string name="provider">Provider</string>
    <string name="best_price">Best price</string>
    <string name="max">Max</string>
    <string name="select_token">Select token</string>
    <string name="swap_spend">Spend</string>
    <string name="swap_receive">Receive</string>
    <string name="swap_fee">Swap fee</string>
    <string name="price_impact">Price impact</string>
    <string name="slippage">Slippage</string>
    <string name="swap_fee_includes">A fee of 0.01% is included in the price</string>
    <string name="swap">Swap</string>
    <string name="review_swap">Review swap</string>
    <string name="send">Send</string>
    <string name="send_confirmation">Send confirmation</string>
    <string name="to">To</string>
    <string name="network_fee">Network fee</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_address">Invalid Solana address</string>
    <string name="insufficient_balance">Insufficient balance</string>
    <string name="loading">loading...</string>
    <string name="error">Error</string>
    <string name="token_not_found">Token not found</string>
    <string name="swaping">Swapping...</string>
    <string name="floor_price">Floor price</string>
    <string name="unique_owners">Unique owners</string>
    <string name="network">Network</string>
    <string name="sending">Sending...</string>
    <string name="sending_token_to">Sending %1$s to %2$s</string>
    <string name="transaction_succeed">Transaction completed</string>
    <string name="test">test</string>
    <string name="wallet_scan">Scan</string>
    <string name="send_tokens">Send tokens</string>
    <string name="send_nft">Send NFT</string>
    <string name="add_to_address_book">Add to address book</string>
    <string name="private_key">Private key</string>
    <string name="import_">Import</string>
    <string name="import_private_key">Import private key</string>
    <string name="transaction_failed">Transaction failed</string>
    <string name="swapped_successfully">Successfully swap</string>
    <string name="swapped">Successfully swap</string>
    <string name="sent_successfully">Successfully sent</string>
    <string name="sent">sent</string>
    <string name="received">received</string>
    <string name="unknown_transaction">Unknwon transaction</string>
</resources>