<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:text="0.12 SOL"
            android:textSize="23dp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:textColor="@color/white"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:textSize="12dp"
                android:gravity="center"
                android:background="@color/design_default_color_primary"
                android:text="@string/wallet_receive"
                android:layout_width="50dp"
                android:layout_height="50dp"
                />

            <TextView
                android:textColor="@color/white"
                android:textSize="12dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center"
                android:background="@color/design_default_color_primary"
                android:text="@string/wallet_send"
                android:layout_width="50dp"
                android:layout_height="50dp"
                />

            <TextView
                android:textColor="@color/white"
                android:textSize="12dp"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                android:gravity="center"
                android:background="@color/design_default_color_primary"
                android:text="@string/wallet_swap"
                android:layout_width="50dp"
                android:layout_height="50dp"
                />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>

</ScrollView>